# Image-Reconstruction

./: CMakeLists.txt  README.md  fangshe.cpp  functions.cpp  functions.h  仿射变换.kdev4
.kdev4/: 仿射变换.kdev4
